--- a/MVCApplication1/Views/Product/Create.cshtml
+++ b/MVCApplication1/Views/Product/Create.cshtml
@@ -1,13 +1,13 @@
-﻿@model Book
+﻿@model Product
 
 @{
-    ViewData["Title"] = "Create Book";
+    ViewData["Title"] = "Create Product";
 }
 
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Book</h2>
+            <h2 class="text-primary">Create Product</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
@@ -17,19 +17,29 @@
             <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="mb-3">
+            <label asp-for="Description"></label>
+            <input asp-for="Description" class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="ISBN"></label>
+            <input asp-for="ISBN" class="form-control" />
+            <span asp-validation-for="ISBN" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
             <label asp-for="Author"></label>
             <input asp-for="Author" class="form-control" />
             <span asp-validation-for="Author" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-controller="Book" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
 @section Scripts
 {
     @{
-        <partial name="_ValidationScriptsPartial" />
+        <partial Title="_ValidationScriptsPartial" />
     }
 }
 
