--- a/MVCApplication1/Views/Shared/_Layout.cshtml
+++ b/MVCApplication1/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Book Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -24,12 +24,18 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Category" asp-action="Index">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Book" asp-action="Index">Books</a>
-                        </li>
+                        <li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Managment</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" asp-controller="Category" asp-action="Index">Category</a>
+								<a class="dropdown-item" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+								<a class="dropdown-item" asp-controller="Product" asp-action="Index">Product</a>
+								@*<div class="dropdown-divider"></div>
+								<a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Create User</a>*@
+							</div>
+						</li>
                     </ul>
                 </div>
             </div>
@@ -42,7 +48,7 @@
         </main>
     </div>
 
-    <footer class="footer text-muted bg-dark">
+    <footer class="footer text-muted bg-primary">
         <div class="container">
             &copy; 2023 - MVCApplication1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
