--- a/MVCApplication1/Views/Shared/_Layout.cshtml
+++ b/MVCApplication1/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link rel="stylesheet" href="//cdn.datatables.net/1.13.2/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="~/MVCApplication1.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -22,14 +23,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Managment</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" asp-controller="Category" asp-action="Index">Category</a>
-								<a class="dropdown-item" asp-controller="CoverType" asp-action="Index">Cover Type</a>
-								<a class="dropdown-item" asp-controller="Product" asp-action="Index">Product</a>
+								<a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+								<a class="dropdown-item" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+								<a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
 								@*<div class="dropdown-divider"></div>
 								<a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
 								<div class="dropdown-divider"></div>
@@ -56,6 +57,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="//cdn.datatables.net/1.13.2/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
